# metu-ceng

./: README.md
CENG334 - Operating Systems/hw2/: Foundry.cpp  Foundry.hpp  Miner.cpp  Miner.hpp  Smelter.cpp  Smelter.hpp  Transporter.cpp  Transporter.hpp  main.cpp
CENG334 - Operating Systems/hw3/: test.txt
CENG336 - Embedded Systems/THE1.X/: temp.asm  the1.asm  trial.asm
CENG336 - Embedded Systems/THE2.X/: the2.asm
CENG336 - Embedded Systems/THE3.X/: LCD.c  LCD.h  the3.c
CENG336 - Embedded Systems/THE4.X/: Includes.h  LCD.c  common.c  common.err  common.h  defines.h  int.c  int.err  main.c  main.err  taskdesc.c  tsk_task0.c  tsk_task1.c  tsk_task2.c  tsk_task2.err  tsk_task3.err  tsk_task4.c
CENG384 - Signals and Systems/.ipynb_checkpoints/: CENG384_prog_hw-checkpoint.ipynb
CENG384 - Signals and Systems/ceng384_pHW/: ceng384_prog_hw.py
CENG443 - Introduction to Object Oriented Programming/oop3/: Main.java  PartsStore.java
CENG477 - Introduction To Computer Graphics/graph3/: Makefile
CENG477 - Introduction To Computer Graphics/hw1/: CMakeLists.txt  Camera.cpp  Camera.h  Light.cpp  Light.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h  VectorUtils.cpp  VectorUtils.h  defs.h  members.txt
CENG477 - Introduction To Computer Graphics/hw1/new_inputs/: cornellbox.xml  cornellbox2.xml  input04_phong.xml  top.xml
CENG477 - Introduction To Computer Graphics/hw2/: .gitignore  Helpers.cpp  Helpers.h  Makefile  Rotation.cpp  Scene.cpp  Scene.h
CENG783 - Deep Learning/hw1/: main.py
CENG783 - Deep Learning/hw2/: MyCNN.py  myNN.py  pytorch_CNN.py  (+1 more)
(+81 files in other folders)
